--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Service</p>
 
 <div class="card w-80 bg-base-100 card-xl shadow-sm">
   <div class="flex justify-between p-4 items-center ">
-    <div class="bg-pink-200 inline-block p-2 rounded-lg ">
+    <div class="bg-red-200 inline-block p-2 rounded-lg ">
 <img src="assets/brac.png" alt="" class="w-[2vh]"></div>
 <i class="fa-regular fa-heart" id="love7"></i>
 
