--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Service</p>
     <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 max-w-[100%] mx-auto bg-[#f5fff6]">
 
 
-    <div class="bg-[#f5fff6] grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-4 p-4 place-items-center col-span-3">
+    <div class="bg-[#f5fff6] grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-col-span-2 xl:grid-cols-3 gap-4 p-4 place-items-center col-span-3">
 <div class="card w-80 bg-white card-xl shadow-sm ">
   <div class="flex justify-between p-4 items-center ">
 
@@ -346,7 +346,7 @@ Service</p>
 
 
 
-    <div class="grid sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-1 xl:grid-cols-1 bg-[#f5fff6] gap-4 p-4 rounded-xl">
+    <div class="grid sm:grid-cols-1 md:grid-cols-1 lg:grid-col-span-1 xl:grid-cols-1 bg-[#f5fff6] gap-4 p-4 rounded-xl">
 
     
 <div class="block bg-white border border-gray-100 gap-4 rounded-xl">
