--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Service</p>
 
         </div>
 
-        <div class="flex gap-8 items-center sm:justify-self-center">
+        <div class="flex gap-8 items-center justify-self-center sm:justify-self-center">
             <div class="flex border-[#006747] rounded-3xl bg-[#41ff6b1a] p-1 gap-4 items-center"><span class="font-bold ml-4" id="love-count">0</span>
             <img src="assets/heart.png" alt="" class="w-[3vh] mr-4"></div>
             <div class="flex border-[#006747] rounded-3xl bg-[#41ff6b1a] p-1 gap-4 items-center"><span class=" point font-bold ml-4" id="point-count">100</span>
